# MecaSolid

./: .gitignore  CMakeLists.txt  Readme.md  _basis_8h_source.html  _basis_id_8h_source.html  _basis_switcher_8h_source.html  _basis_switcher_from_basis_to_basis_8h_source.html  _basis_switcher_from_basis_to_global_8h_source.html  _basis_switcher_from_global_to_basis_8h_source.html  _line_8h_source.html  _matrix3x3_8h_source.html  _plan_8h_source.html  _point_8h_source.html  _polygon_8h_source.html  _quaternion_8h_source.html  _segment_8h_source.html  _solid_8h_source.html  _switcher_8h_source.html  _vector3_d_8h_source.html  _vectors_quaternion_converter_8h_source.html  annotated.html  class_luga_1_1_meca_1_1_solid_1_1_solid-members.html  class_luga_1_1_meca_1_1_solid_1_1_solid.html  class_luga_1_1_meca_1_1_solid_1_1_solid__coll__graph.map  class_luga_1_1_meca_1_1_solid_1_1_solid__coll__graph.md5  class_luga_1_1_meca_1_1_utils_1_1_basis-members.html  class_luga_1_1_meca_1_1_utils_1_1_basis.html  class_luga_1_1_meca_1_1_utils_1_1_basis__coll__graph.map  class_luga_1_1_meca_1_1_utils_1_1_basis__coll__graph.md5  class_luga_1_1_meca_1_1_utils_1_1_basis_id-members.html  class_luga_1_1_meca_1_1_utils_1_1_basis_id.html  class_luga_1_1_meca_1_1_utils_1_1_basis_id__coll__graph.map  class_luga_1_1_meca_1_1_utils_1_1_basis_id__coll__graph.md5  class_luga_1_1_meca_1_1_utils_1_1_basis_id__inherit__graph.map  class_luga_1_1_meca_1_1_utils_1_1_basis_id__inherit__graph.md5  class_luga_1_1_meca_1_1_utils_1_1_basis_switcher-members.html  class_luga_1_1_meca_1_1_utils_1_1_basis_switcher.html  class_luga_1_1_meca_1_1_utils_1_1_basis_switcher__coll__graph.map  class_luga_1_1_meca_1_1_utils_1_1_basis_switcher__coll__graph.md5  class_luga_1_1_meca_1_1_utils_1_1_basis_switcher__inherit__graph.map  (+39 more)
Source/: main.cpp
Source/Libs/: CMakeLists.txt
Source/Libs/Basis/: CMakeLists.txt
Source/Libs/Basis/Include/Basis/: Basis.h  Matrix3x3.h  Quaternion.h  UnitQuaternion.h  UnitVector3D.h  Vector3D.h
Source/Libs/Basis/Source/: Basis.cpp  Matrix3x3.cpp  Quaternion.cpp  UnitQuaternion.cpp  UnitVector3D.cpp  Vector3D.cpp
Source/Libs/Repository/: CMakeLists.txt
Source/Libs/Repository/Include/: JsonConverter.h  SolidRepository.h
Source/Libs/Repository/Source/: JsonConverter.cpp  SolidRepository.cpp
Source/Libs/Solid/: CMakeLists.txt
Source/Libs/Solid/Include/Solid/: Basis.h  Solid.h
Source/Libs/Solid/Source/: Basis.cpp  Solid.cpp
Source/Libs/Utils/: CMakeLists.txt
Source/Libs/Utils/Basis/: Basis.cpp  Basis.h  BasisId.cpp  BasisId.h  DoubleComparison.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h  VectorsQuaternionConverter.cpp  VectorsQuaternionConverter.h
Source/Libs/Utils/BasisChanger/: BasisChanger.cpp  BasisChanger.h  BasisChangerFromBasisToBasis.cpp  BasisChangerFromBasisToBasis.h  BasisChangerFromBasisToGlobal.cpp  BasisChangerFromBasisToGlobal.h  BasisChangerFromGlobalToBasis.cpp  BasisChangerFromGlobalToBasis.h  BasisChangerImplementation.cpp  BasisChangerImplementation.h
Source/Libs/Utils/Exceptions/: Error.h
Source/Libs/Utils/GeometryConcepts/: Line.cpp  Line.h  Plan.cpp  Plan.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Segment.cpp  Segment.h
Source/Libs/Utils/Include/Utils/: Basis.h  BasisChanger.h  BasisChangerFromBasisToBasis.h  BasisChangerFromBasisToGlobal.h  BasisChangerFromGlobalToBasis.h  BasisChangerImplementation.h  BasisId.h  BasisSwitcher.h  BasisSwitcherFromBasisToBasis.h  BasisSwitcherFromBasisToGlobal.h  BasisSwitcherFromGlobalToBasis.h  Line.h  Matrix.h  Matrix3x3.h  Plan.h  Point.h  Polygon.h  Quaternion.h  Segment.h  Switcher.h  Vector.h  Vector3D.h  VectorsQuaternionConverter.h
Source/Libs/Utils/Interception/: Interception.cpp  Interception.h  InterceptorLineSegment.cpp  InterceptorLineSegment.h  InterceptorLines.cpp  InterceptorLines.h  InterceptorPlanLine.cpp  InterceptorPlanLine.h  InterceptorPlans.cpp  InterceptorPlans.h  InterceptorSegments.cpp  InterceptorSegments.h
Source/Libs/Utils/Source/: Basis.cpp  BasisChanger.cpp  BasisChangerFromBasisToBasis.cpp  BasisChangerFromBasisToGlobal.cpp  BasisChangerFromGlobalToBasis.cpp  BasisChangerImplementation.cpp  BasisId.cpp  BasisSwitcher.cpp  BasisSwitcherFromBasisToBasis.cpp  BasisSwitcherFromBasisToGlobal.cpp  BasisSwitcherFromGlobalToBasis.cpp  Line.cpp  Matrix.cpp  Matrix3x3.cpp  Plan.cpp  Point.cpp  Polygon.cpp  Quaternion.cpp  Segment.cpp  Switcher.cpp  Vector.cpp  Vector3D.cpp  VectorsQuaternionConverter.cpp
Tests/: CMakeLists.txt  TestBasis.cpp  TestBasisChanger.cpp  TestBasisChangerBasisToBasis.cpp  TestBasisChangerBasisToGlobal.cpp  TestBasisChangerGlobalToBasis.cpp  TestBasisId.cpp  TestBasisSwitcher.cpp  TestBasisSwitcherBasisToBasis.cpp  TestBasisSwitcherBasisToGlobal.cpp  TestBasisSwitcherGlobalToBasis.cpp  TestLine.cpp  TestMatrix.cpp  TestMatrix3x3.cpp  TestPoint.cpp  TestQuaternion.cpp  TestSegment.cpp  TestSolid.cpp  TestUnitQuaternion.cpp  TestVector.cpp  TestVector3D.cpp  TestVectorsQuaternionConverter.cpp  main.cpp
Tests/Basis/: TestBasis.cpp  TestBasisId.cpp  TestMatrix.cpp  TestQuaternion.cpp  TestVector.cpp  TestVectorsQuaternionConverter.cpp
Tests/BasisChanger/: TestBasisChanger.cpp  TestBasisChangerBasisToBasis.cpp  TestBasisChangerBasisToGlobal.cpp  TestBasisChangerGlobalToBasis.cpp
Tests/GeometryConcepts/: TestLine.cpp  TestPoint.cpp  TestSegment.cpp
Tests/Interception/: TestInterceptorLines.cpp  TestInterceptorPlans.cpp  TestInterceptorSegments.cpp
Tests/Repository/: TestSolidReposiroty.cpp  TestSolidRepository.cpp
Tests/Repository/Resources/: solid.json
Tests/Resource/: DoublePrecision.h
Tests/Solid/: TestSolid.cpp
